reservation/src/main/resources/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: m-caj-reservation
spec:
  host: m-caj-reservation-${STUDENT_ID}.${BASE_DOMAIN}
  to:
    kind: Service
    name: m-caj-reservation
    weight: 100
  port:
    targetPort: 8080
